# DolphinQt

./: .gitignore  CMakeLists.txt
CMakeTests/: FindAnyQt.cmake
Source/Core/: CMakeLists.txt
Source/Core/DolphinQt/: CMakeLists.txt
Source/Core/DolphinQt/Resources/: Resources.qrc
Source/Core/DolphinQt/Src/: GameList.cpp  GameList.h  GameObject.cpp  GameObject.h  LogSettings.ui  LogWidgets.cpp  LogWidgets.h  LogWindow.cpp  LogWindow.h  LogWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindowEvents.cpp  RenderWidget.cpp  RenderWidget.h  RenderWindow.cpp  RenderWindow.h  SystemInfo.cpp  SystemInfo.h  SystemInfo.ui  main.cpp
Source/Core/DolphinQt/Src/Config/: ConfigAudio.cpp  ConfigAudio.h  ConfigGeneral.cpp  ConfigGeneral.h  ConfigGfx.cpp  ConfigGfx.h  ConfigMain.cpp  ConfigMain.h  ConfigPad.cpp  ConfigPad.h  ConfigWiimote.cpp  ConfigWiimote.h
Source/Core/DolphinQt/Src/GameList/: GameGrid.cpp  GameGrid.h  GameGrid.ui  GameTracker.cpp  GameTracker.h  GameTree.cpp  GameTree.h  GameTree.ui
Source/Core/DolphinQt/Src/Util/: Resources.cpp  Resources.h  Util.cpp  Util.h
Source/Core/VideoCommon/: VideoConfig.cpp
